Update directory prisma

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
       "@core/*": ["core/src/*"],
       "@libs/*": ["core/src/libs/*"],
       "@utils/*": ["core/src/utils/*"],
+      "@providers/*": ["core/src/providers/*"],
       "@config/*": ["config/*"]
     }
   }
