--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.12.0",
+    "joi": "^17.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -72,6 +74,6 @@
     "testEnvironment": "node"
   },
   "prisma": {
-    "schema": "core/src/providers/prisma/schema.prisma"
+    "schema": "core/src/providers/postgresql/prisma/schema.prisma"
   }
 }
