--- a/.env.development
+++ b/.env.development
@@ -7,3 +7,10 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://nebo:123@127.0.0.1:5432/nebo?schema=public"
+
+#Crypto
+CRYPTO_SECRET="nebo"
+
+# JWT
+JWT_EXPIRATION_TIME=1860000
+JWT_SECRET="nebo"
