--- a/.env.production
+++ b/.env.production
@@ -9,8 +9,8 @@
 DATABASE_URL="postgresql://nebo:123@127.0.0.1:5432/nebo?schema=public"
 
 #Crypto
-CRYPTO_SECRET="nebo"
+CRYPTO_PASSWORD="nebo"
 
 # JWT
 JWT_EXPIRATION_TIME=1860000
-JWT_SECRET=123
+JWT_SECRET="nebo"
