--- a/.env.development
+++ b/.env.development
@@ -9,7 +9,7 @@
 DATABASE_URL="postgresql://nebo:123@127.0.0.1:5432/nebo?schema=public"
 
 #Crypto
-CRYPTO_SECRET="nebo"
+CRYPTO_PASSWORD="nebo"
 
 # JWT
 JWT_EXPIRATION_TIME=1860000
