--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "nest:build": "nest build",
-    "build": "vite build",
+    "build": "vite build --sourcemap",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "nest:dev": "nest start --watch",
-    "dev": "node node_modules/vite/bin/vite.js",
+    "dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "debug": "nest start --debug --watch",
     "prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -61,6 +60,7 @@
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
     "prisma": "^3.12.0",
+    "run-script-webpack-plugin": "0.0.11",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
@@ -70,7 +70,9 @@
     "typescript": "^4.3.5",
     "vite": "^2.9.1",
     "vite-plugin-node": "0.0.19",
-    "vite-tsconfig-paths": "^3.4.1"
+    "vite-tsconfig-paths": "^3.4.1",
+    "webpack": "^5.72.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
