--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 PORT=8112
-NODE_ENV=development
+NODE_ENV="development"
+
+APP_NAME="NeBo"
+APP_DESCRIPTION="Nest.js Boilerplate"
+APP_VERSION=v1.0.0-alpha
 
 DATABASE_URL="postgresql://nebo:123@127.0.0.1:5432/nebo?schema=public"
