Prisma exception catcher

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "@libs/*": ["core/src/libs/*"],
       "@utils/*": ["core/src/utils/*"],
       "@providers/*": ["core/src/providers/*"],
+      "@errors/*": ["core/src/errors/*"],
       "@config/*": ["config/*"]
     }
   }
