--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ APP_NAME="NeBo"
 APP_DESCRIPTION="Nest.js Boilerplate"
 APP_VERSION=v1.0.0-alpha
 
-DATABASE_URL="postgresql://nebo:123@127.0.0.1:5432/nebo?schema=public"
+DATABASE_URL="postgresql://nebo:123@postgres:5432/nebo?schema=public"
