--- a/.env.production
+++ b/.env.production
@@ -6,9 +6,9 @@
 
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://nebo:123@127.0.0.1:5432/nebo?schema=public"
+DATABASE_URL="postgresql://nebo:123@postgres:5432/nebo?schema=public"
 
-#Crypto
+# Crypto
 CRYPTO_PASSWORD="nebo"
 
 # JWT
