--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migrate:dev": "dotenv -e .env.development -- npx prisma migrate dev --name postgres-init"
+    "migrate:dev": "./node_modules/.bin/dotenv -e .env.development -- npx prisma migrate dev --name postgres-init"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -60,6 +60,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "dotenv-cli": "^5.1.0",
     "env-bool": "^2.0.1",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
