--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,4 @@ lerna-debug.log*
 
 # ignore files..
 # .env*
-
-./core/src/providers/postgres/prisma/migrations/*
+core/src/providers/postgresql/prisma/migrations/*
