--- a/.env.development
+++ b/.env.development
@@ -6,7 +6,7 @@
 
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://nebo:123@127.0.0.1:5432/nebo?schema=public"
+DATABASE_URL="postgresql://nebo:123@database:5432/nebo?schema=public"
 
 # Crypto
 CRYPTO_PASSWORD="nebo"
