--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migrate:dev": "./node_modules/.bin/dotenv -e .env.development -- npx prisma migrate dev --name postgres-init"
+    "migrate:dev": "./node_modules/.bin/dotenv -e .env.development -- npx prisma migrate dev --name postgres-init",
+    "prisma:studio": "./node_modules/.bin/dotenv -e .env.development -- npx prisma studio"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
