--- a/.env.development
+++ b/.env.development
@@ -6,7 +6,14 @@
 
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://nebo:123@database:5432/nebo?schema=public"
+PORT=8112
+NODE_ENV="production"
+
+APP_NAME="NeBo"
+APP_DESCRIPTION="Nest.js Boilerplate with development"
+APP_VERSION="v1.0.0-alpha"
+
+DATABASE_URL="postgresql://nebo:123@host.docker.internal:5432/nebo?schema=public"
 
 # Crypto
 CRYPTO_PASSWORD="nebo"
