--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
 PORT=8113
-NODE_ENV="development"
 
 APP_NAME="NeBo"
-APP_DESCRIPTION="Nest.js Boilerplate"
+APP_DESCRIPTION="Nest.js Boilerplate with local"
 APP_VERSION="v1.0.0-alpha"
 
 # Environment variables declared in this file are automatically made available to Prisma.
