--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "nest:build": "nest build",
-    "build": "vite build --sourcemap",
+    "build:nest": "nest build",
+    "build": "vite build --watch",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
+    "dev": "vite",
+    "dev:nest": "nest start --watch",
     "debug": "nest start --debug --watch",
     "prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
