--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT=8113
 
 APP_NAME="NeBo"
-APP_DESCRIPTION="Nest.js Boilerplate with local"
-APP_VERSION="v1.0.0-alpha"
+APP_DESCRIPTION="Nest.js Boilerplate with development"
+APP_VERSION="1.0.0-alpha"
 
 # Environment variables declared in this file are automatically made available to Prisma.
 
