--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build:nest": "nest build",
-    "build": "vite build",
+    "build:vite": "vite build",
+    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "dev": "vite",
+    "dev:vite": "vite",
+    "dev": "nest start --watch",
     "start:nest": "nest start",
-    "dev:nest": "nest start --watch",
     "debug": "nest start --debug --watch",
     "prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
