Refactoring & organize information

--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,7 @@ PORT=8112
 
 APP_NAME="NeBo"
 APP_DESCRIPTION="Nest.js Boilerplate with development"
-APP_VERSION="v1.0.0-alpha"
+APP_VERSION="0.1.0"
 
 # Environment variables declared in this file are automatically made available to Prisma.
 
