--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nebo",
+  "name": "@boy672820/nebo",
   "version": "1.3.1",
   "description": "Nest.js boilerplate",
   "author": "boy672820",
